# discr_lab2

./: .gitignore  CMakeLists.txt  gmon.out
include/: rb_tree.hpp  rb_tree_exceptions.hpp
research/: research.md
src/: main.cpp  main1.cpp
test_lab3/factorial/: compile_and_profile.sh  gmon.out  main.cpp
test_lab3/factorial/profile_-O0/: gmon.out  main_-O0
test_lab3/factorial/profile_-O1/: analysis_-O1.txt  main_-O1
test_lab3/factorial/profile_-O2/: main_-O2
test_lab3/factorial/profile_-O3/: main_-O3
test_lab3/factorial/profile_-Os/: analysis_-Os.txt  gmon.out  main_-Os
test_lab3/main/: compile_and_profile.sh  main.cpp
test_lab3/main/profile_-O0/: analysis_-O0.txt  gmon.out  main_-O0
test_lab3/main/profile_-O1/: analysis_-O1.txt  gmon.out  main_-O1
test_lab3/main/profile_-O2/: gmon.out  main_-O2
test_lab3/main/profile_-O3/: analysis_-O3.txt  gmon.out  main_-O3
test_lab3/main/profile_-Os/: analysis_-Os.txt  gmon.out  main_-Os
tests/: genAndRunTests.py  test.txt
tests_lab2/: genAndRunTests.py  gmon.out  profile  profileOnTest.py
